Fixed drawer position. It was set to absolute and should be fixed. Overridden behavior in docs demo to work in a little window. Fixed z-index problem with cssnano gulp plugin; it previously set all z-index values to 1. Configured global z-index values for the whole framework.

--- a/src/chi/components/backdrop/backdrop.scss
+++ b/src/chi/components/backdrop/backdrop.scss
@@ -1,21 +1,24 @@
 @import 'mixins';
+@import 'variables';
 
-.a-backdrop {
-  align-items: center;
-  background-color: rgba(set-color(black), 0.65);
-  bottom: 0;
-  display: flex;
-  justify-content: center;
-  left: 0;
-  overflow: hidden;
-  padding: 0 0.5rem;
-  pointer-events: none;
-  position: fixed;
-  right: 0;
-  top: 0;
+.chi {
 
-  &.-inverse {
-    background-color: rgba(set-color(white), 0.8);
+  .a-backdrop {
+    align-items: center;
+    background-color: rgba(set-color(black), 0.65);
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    overflow: hidden;
+    padding: 0 0.5rem;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: $zindex-backdrop;
+
+    &.-inverse {
+      background-color: rgba(set-color(white), 0.8);
+    }
   }
 }
-
