--- a/src/chi/components/dropdown/dropdown.scss
+++ b/src/chi/components/dropdown/dropdown.scss
@@ -11,7 +11,7 @@
       left: 0;
       min-width: 100%;
       position:absolute;
-      z-index: 1;
+      z-index: $zindex-dropdown;
     }
 
     &__trigger {
