--- a/src/chi/components/input-file/input-file.scss
+++ b/src/chi/components/input-file/input-file.scss
@@ -62,7 +62,7 @@
           & + label::before {
             border: 0.0625rem solid set-color(grey, 40);
             box-shadow: 0 0 0 3px rgba(set-color(grey, 30), 0.6);
-            z-index: 1;
+            z-index: $zindex-focus;
           }
         }
 
