--- a/src/website/assets/styles/_docs-header.scss
+++ b/src/website/assets/styles/_docs-header.scss
@@ -7,6 +7,7 @@
 
     @include respond-to(lg) {
       position: fixed;
+      z-index: 2006;
     }
   }
 }
